# ThreatMesh

./: .gitignore  README.md  client.py  collected_data.json  requirements.txt
backend/: README.md  app.py  collected_data.json  pyproject.toml  requirements.txt
backend/local_client/: collected_data.json  local_client.py
backend/src/: collected_data.py  ip_utils.py  mongodb.py  poller.py  utils.py
backend/src/cve_searcher/: confidence.py  cpematch.py  cvematch.py  cvequery.py  search_vulnerabilties.py  utils.py
backend/src/nvd/: mirror_nvd.py  nvd_api.py  nvd_structs.py  utils.py
frontend/client/: package-lock.json  package.json
