[project]
name = "ThreadMesh"
version = "0.1.0"
description = "ThreatMesh - "
authors = [{ name = "Ilan", email = "ilan@gmail.com" }] # TODO Fix authors
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" }

dependencies = [
    "cpe-utils>=0.1.0",
    "flask>=3.1.0",
    "hypercorn>=0.17.3",
    "loguru>=0.7.3",
    "orjson>=3.10.15",
    "packaging>=24.2",
    "psutil>=7.0.0",
    "pydantic>=2.10.6",
    "pymongo>=4.11.2",
    "python-dotenv>=1.0.1",
    "pytz>=2025.1",
    "requests>=2.32.3",
    "winapps>=0.2.0",
    "windows-tools-installed-software>=0.5.4",
]

[project.urls]
Homepage = "https://github.com/Ilan961128/ThreatMesh"
Issues = "https://github.com/Ilan961128/ThreatMesh/issues"
